# cockpit

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  flatbuf  imgui.ini
include/: shcom.hh  vtk_preview.hpp  zmqcom.hh
src/: imcnc.cpp  imhal.cpp  main.cpp  shcom.cpp  vtk_preview.cpp  zmqcom.cpp
